# tableturf

./: .gitignore  Cargo.toml  README.md
bevy_client/: Cargo.toml
bevy_client/src/: ai.rs  board.rs  cards.rs  cursor.rs  game.rs  main.rs  ui.rs
bevy_client/src/utils/: cursor.rs
tableturf/: Cargo.toml
tableturf-client/: Cargo.toml
tableturf-client/src/: client.rs  main.rs  ui.rs
tableturf-client/src/states/: error_message.rs  join_multi.rs  menu.rs  mod.rs  multi_lobby.rs
tableturf-client/src/states/mp_match/: game.rs  match_lobby.rs  mod.rs
tableturf-client/src/ui/: button.rs  mod.rs  textbox.rs
tableturf-server/: Cargo.toml
tableturf-server/src/: game.rs  lib.rs  main.rs  server.rs
tableturf/src/: board.rs  cards.rs  lib.rs  protocol.rs
