[package]
name = "bevy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
rand = "0.8.5"

# Some stuff to help boost compile times
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
