[package]
name = "tableturf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tableturf = { path = "../tableturf" }
serde_json.workspace = true
color-eyre.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.31"
